pool-of-fedoras/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fedora-http-service
  namespace: pool-of-fedoras
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: fedora-http-service
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
